added db console, separated config from context setup; fixed bug in facsimile tile generation